--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <h1>PTV Rewards Video</h1>
-<style body {background-color: #F0FFFF;}  
+<style body {background-color: #F0FFFF;}
+  h1 {text-align: center;}
 </style>
 
 
