--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<h1>PTV Rewards Video</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    
+<h1> PTV Rewards Video </h1>
 <style body {background-color: #F0FFFF;}
   h1 {text-align: center;}
 </style>
