--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+  <style body {background-color: #F0FFFF;} h1 {text-align: center;}</style>
   </head>
-  <body>
-
-<h1> PTV Rewards Video </h1>
-
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<style body {background-color: #F0FFFF;}
-  h1 {text-align: center;}
-</style>
+    <body>
+    <h1> PTV Rewards Video </h1>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+    </body>
+  </html>
