--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  <style body {background-color: #F0FFFF;} h1 {text-align: center;}</style>
+    <title> PTV Rewards Video </title>
   </head>
-    <body>
-    <h1> PTV Rewards Video </h1>
+  <body>
     <iframe width="560" height="315"
     src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
-    </body>
-  </html>
+  </body>
+</html>
