might need a stylesheet

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<title> PTV Rewards Video </title>
   <head>
     <meta charset="utf-8">
-    <title> PTV Rewards Video </title>
-  </head>
+    <title></title>
+  <head>
   <body>
+  <header>
+
+  <hr>
+  <h1>PTV Rewards Video</h1>
+  <hr>
     <iframe width="560" height="315"
     src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
