--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="indexstyle.css">
   <head>
   <body>
   <header>
@@ -11,8 +12,7 @@
   <hr>
   <h1>PTV Rewards Video</h1>
   <hr>
-    <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
+  <iframe width="560" height="315"src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
   </body>
 </html>
