--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="indexstyle.css">
+    <link rel="stylesheet" href="index.css">
   <head>
   <body>
   <header>
