--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <hr>
   <h1>PTV Rewards Video</h1>
   <hr>
-  <iframe width="560" height="315"src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  <div>
+  <iframe style="float: right;/* text-align; right;*/; position: relative; left: -675px"  width="560" height="315"src="https://www.youtube.com/embed/6pMlXgmP7KU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   </iframe>
+</div>
   </body>
 </html>
